--- a/app/src/main/res/layout/activity_detail_history_purchase.xml
+++ b/app/src/main/res/layout/activity_detail_history_purchase.xml
@@ -148,6 +148,7 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/confirm_payment_purchase"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginStart="@dimen/margin_space"
